<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>

    <string name="hello">Hello World</string>
    <string name="app_name">SensorCity</string>
    <string name="light">Luminosity:</string>
    <string name="temperature">Temperature:</string>
    <string name="google_map_api_key_debug">097f5NoroK4ZWCQD3V7HANGebesy7_uqdrsYDSA</string>
    <string name="ui_about">About</string>
    <string name="ui_exit">Exit</string>
    <string name="copyright">SensorCity v1.0</string>
    <string name="title">SensorCity Sensors</string>
    <string name="about">Sensor City is an application that can be used to get information about the sensors by Johnnatan Messias, Jie Liu and Hugo Silva.</string>
    <string name="title_map">Sensors Map</string>
    <string name="title_about">About SensorCity</string>
    <string name="button_sensors">Sensors List</string>
    <string name="button_map">Sensors Map</string>
    <string name="humid">Humidity:</string>
    <string name="wait">Please wait, loading</string>
    <string name="error">Error loading information</string>
    <string name="title_sensors_list">Sensors List</string>
    <string name="title_about_sensors">About Sensor</string>
    <string name="sensors">Sensors:</string>
    <string name="address">Address:</string>
    <string name="street">Street: </string>
    <string name="number">Nº:</string>
    <string name="state">State: </string>
    <string name="city">City: </string>
    <string name="neighborhood">Neighbourhood: </string>
    <string name="country">Country:</string>
    <string name="informations">Information: </string>
    <string name="ui_place_change_map">Change Map</string>
    <string name="atmpressure">Atm Pressure:</string>
    <string name="audio">Audio:</string>
    <string name="namesensor">Sensor Name:</string>
    <string name="timestamp">Last Updated at:</string>
    <string name="zip">ZIP:</string>
    <string name="ap">AP:</string>
    <string name="longitude">Long:</string>
    <string name="latitude">Lat:</string>

</resources>