<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="12dp"
    android:gravity="center_vertical"
    android:minHeight="50dp"
    android:orientation="horizontal"
    android:paddingBottom="2dp"
    android:paddingTop="2dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/temperatura"
            style="@style/texto14Negrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/temperature" >
        </TextView>

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginRight="5dp"
            android:background="@color/vermelho" >
        </View>

        <TextView
            android:id="@+id/luminosidade"
            style="@style/texto14Negrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/light" >
        </TextView>

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginRight="5dp"
            android:background="@color/vermelho" >
        </View>

        <TextView
            android:id="@+id/umidade"
            style="@style/texto14Negrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/humid" >
        </TextView>

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginRight="5dp"
            android:background="@color/vermelho" >
        </View>

        <TextView
            android:id="@+id/city"
            style="@style/texto14Negrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:gravity="right|center_vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="5dp"
            android:src="@drawable/direction_right" >
        </ImageView>
    </LinearLayout>

</LinearLayout>